<resources>
    <string name="app_name">Map together</string>
    <string name="login_title" translatable="false">Your\nown\ngym</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="login">Log in</string>
    <string name="not_exist_acc"><u>Don’t have an account?</u></string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="change_user_name">Изменить имя</string>
    <string name="user_name">Имя</string>
    <string name="confirm">Подтвердить</string>
    <string name="confirmation">Подтверждение</string>
    <string name="registration">Регистрация</string>
    <string name="add_workout">Добавить тренировку</string>
    <string name="action_add">Добавить</string>
    <string name="add_to_bookmarks">Добавить в закладки</string>
    <string name="exercise_type">Тип упражнения</string>
    <string name="star_required" translatable="false">*</string>

    <string name="choose_exercise_type">Выберите тип упражнения</string>
    <string name="enter_exercise_name">Название упражнения</string>
    <string name="cancellation">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="exercise_elements">Элементы упражнения</string>
    <string name="exercise">Упражнение</string>
    <string name="parameter_name">Имя параметра</string>
    <string name="value">Значение</string>
    <string name="workout">Тренировка</string>
    <string name="settings">Настройки</string>
    <string name="enter_workout_name">Название тренировки</string>
    <string name="drawer_item_settings">Настройки</string>
    <string name="account_settings">Настройки аакаунта</string>
    <string name="drawer_item_bookmarks">Закладки</string>
    <string name="drawer_item_favourites">Избранное</string>
    <string name="drawer_item_search">Найти тренировку</string>

    <string name="image">Фото</string>
    <string name="change_imnage">Изменить ваше фото</string>
    <string name="remember">Запомнить</string>
    <string name="error">Ошибка</string>
    <string name="close">Закрыть</string>
    <string name="quit">Выход</string>
    <string name="quit_confirm_msg">Вы действительно хотите выйти из аккаунта?</string>
    <string name="successfully">Успешно</string>
    <string name="img_loaded_successfully">Изображение загружено</string>
    <string name="user_exist">Пользователь уже существует</string>
    <string name="failed_registr">Не удалось зарегистрироваться, попробуйте ещё раз позже.</string>
    <string name="failed_login">Не удалось войти, попробуйте ещё раз позже.</string>
    <string name="failed_response" translatable="false">Не удалось выполнить запрос, попробуйте ещё раз позже.</string>
    <string name="failed_change_user_data">Не удалось изменить данные, попробуйте ещё раз позже.</string>
    <string name="incorrect_email">Некорректный адрес эл.почты</string>
    <string name="incorrect_password">Некорректный пароль</string>
    <string name="incorrect_confirm_passowrd">Пароли не совпадают</string>
    <string name="incorrect_first_name">Некорректное имя</string>
    <string name="incorrect_email_or_password">Неправильная эл. почта или пароль.</string>
    <string name="cannot_login">Не удалось войти.</string>
    <string name="cannot_sign_up">Не удалось зарегистрироваться.</string>
    <string name="server_not_available">Сервер недоступен.</string>

    <string name="preference_account_settings">Аккаунт</string>
    <string name="preference_account_settings_summary">Настройки аккаунта</string>
    <string name="preference_delete_account">Удалить аккаунт</string>
    <string name="preference_delete_account_summary">Этот аккаунт будет удалён безвозвратно</string>
    <string name="preference_exit">Выйти</string>
    <string name="preference_exit_summary">Выйти из этого аккаунта</string>
    <string name="preference_say_error">Сообщить об ошибке</string>
    <string name="preference_say_error_summary">Пожалуйста, сообщите нам об ошибке</string>
    <string name="preference_edit_user_name">Имя</string>
    <string name="preference_change_avatar">Фото</string>
    <string name="preference_change_avatar_summary">Сменить фотографию</string>
    <string name="preference_personal_data_category">Личные данные</string>
    <string name="star_required_text">* - Обязательные поля</string>

    <string name="drawer_item_save">Сохранить данные</string>
    <string name="data_saving">Сохраняю данные…</string>
    <string name="share">Поделиться</string>
    <string name="choose_all">Выбрать все</string>
    <string name="profile">Профиль</string>
    <string name="next">Далее</string>
    <string name="remove">Удалить</string>
    <string name="prev">Назад</string>
    <string name="zoom_in_text" translatable="false">zoom_in</string>
    <string name="zoom_out_text" translatable="false">zoom_out</string>
    <string name="line_point_text" translatable="false">line_point</string>
    <string name="search_button_text" translatable="false">Search_button</string>
    <string name="Done">Готово</string>
    <string name="hide_all">Скрыть все </string>
    <string name="demonstrate_all">Показать всем</string>
    <string name="show_all">Показать все</string>
    <string name="owner">Владелец</string>
    <string name="member">Участник</string>
    <string name="members"> участников</string>
    <string name="tag_remove_alert">Вы дествительно хотите удалить место \'%s\'?</string>
    <string name="new_map_name">"пустая карта"></string>
    <string name="load_media" translatable="false">Фото</string>
    <string name="not_found_error_message">Not found</string>
    <string name="network_error_message">Network error</string>
    <string name="remote_error_message">Remote server error</string>
    <string name="unknown_error_message">Unknown error</string>
    <string name="map_remove_alert">Вы уверены, что хотите удалить карту \'%s\'?</string>
    <string name="map_leave_alert">Вы уверены, что хотите покинуть карту \'%s\'?</string>
    <string name="maps_list">Библиотека карт</string>
    <string name="tags_list">Список мест</string>

    <string name="stop_the_demonstration">Остановить показ</string>
    <string name="account">Аккаунт</string>
    <string name="change_categories">Изменить категории</string>
    <string name="bug_report">Отчёт об ошибке</string>
    <string name="about_app">О приложении</string>
    <string name="change_password">Изменить пароль</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="delete_account_confirmation">Вы уверены, что хотите удалить аккаунт?</string>
    <string name="empty_categories_list">Здесь будут твои категории.\nНажми на плюсик, чтобы создать новую</string>
    <string name="information_about_project">The application will help you and your friends plan a common trip. \n
     Mark your favourite places and discuss them together.</string>
    <string name="test_account_email">test@test.test</string>
    <string name="qwerty">qwerty</string>
    <string name="map_open">Открыть карту</string>
    <string name="map_create">Создать карту</string>
    <string name="logout">Выйти из профиля</string>
    <string name="edit_name">Изменение имени</string>
    <string name="enter_new_name">Введите новое имя</string>
    <string name="empty_category" translatable="false">"Имя категории пустое"</string>
    <string name="already_created_category" translatable="false">"Такая категория уже существуете"</string>
    <string name="delete_category_confirmation">Вы уверены, что хотите удалить категорию?</string>
    <string name="delete_place_confirmation" translatable="false">Вы уверены, что хотите удалить место?</string>
    <string name="delete_user_confirmation" translatable="false">Вы уверены, что хотите удалить пользователя с карты?</string>
    <string name="def_category" translatable="false">Без категории</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отменить</string>
    <string name="edit">Изменить</string>
    <string name="places_list" translatable="false">Места</string>
    <string-array name="role_types">
        <item>Модерация</item>
        <item>Изменение</item>
        <item>Просмотр</item>
    </string-array>
</resources>
