<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:movable="true"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageButton
            android:id="@+id/search_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="50dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/search_button_text"
            android:minWidth="32dp"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_baseline_search_24" />

        <EditText
            android:id="@+id/search_text_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_50"
            android:layout_marginTop="@dimen/padding_50"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:textSize="25dp"
            android:visibility="invisible" />

    </com.yandex.mapkit.mapview.MapView>

    <ImageButton
        android:id="@+id/line_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_50"
        android:contentDescription="@string/line_point_text"
        android:minHeight="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/zoom_in_id"
        app:srcCompat="@drawable/ic_line_point" />

    <ImageButton
        android:id="@+id/zoom_in_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/zoom_in_text"
        app:layout_constraintTop_toBottomOf="@id/line_point"
        app:layout_constraintBottom_toTopOf="@id/zoom_out_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_zoom_in" />

    <ImageButton
        android:id="@+id/zoom_out_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/zoom_out_text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_zoom_out" />


</androidx.constraintlayout.widget.ConstraintLayout>