<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/login_title_tv"
        style="@style/TextAppearance.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_8dp"
        android:ellipsize="end"
        android:lines="@integer/integer_1"
        android:maxLines="@integer/integer_1"
        android:text="@string/registration"
        android:textSize="@dimen/text_size_25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <include
        android:id="@+id/image_include"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:minHeight="@dimen/padding_40"
        app:layout_constraintTop_toBottomOf="@id/login_title_tv"
        app:layout_constraintBottom_toTopOf="@id/input_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        layout="@layout/item_media_loader" />

    <TextView
        android:id="@+id/user_name_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/star_required"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="@id/input_user_name"
        app:layout_constraintRight_toLeftOf="@id/input_user_name"
        app:layout_constraintTop_toTopOf="@id/input_user_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_40"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:textColorHint="@color/gray_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/input_layout_email">

        <AutoCompleteTextView
            android:id="@+id/user_name_et"
            style="@style/Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_40"
        android:background="@color/white"
        android:textColorHint="@color/gray_3"
        app:layout_constraintBottom_toTopOf="@id/input_layout_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_include">

        <AutoCompleteTextView
            android:id="@+id/email_et"
            style="@style/Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/email_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/star_required"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="@id/input_layout_email"
        app:layout_constraintRight_toLeftOf="@id/input_layout_email"
        app:layout_constraintTop_toTopOf="@id/input_layout_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_password"
        style="@style/InputPasswordHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_40"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/input_layout_confirm_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_email">

        <EditText
            android:id="@+id/password_et"
            style="@style/Input.Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/star_required"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="@id/input_layout_password"
        app:layout_constraintRight_toLeftOf="@id/input_layout_password"
        app:layout_constraintTop_toTopOf="@id/input_layout_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_confirm_password"
        style="@style/InputPasswordHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_40"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/cancel_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_password">

        <EditText
            android:id="@+id/confirm_password_et"
            style="@style/Input.Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/confirm_password_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/star_required"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="@id/input_layout_confirm_password"
        app:layout_constraintRight_toLeftOf="@id/input_layout_confirm_password"
        app:layout_constraintTop_toTopOf="@id/input_layout_confirm_password" />

    <TextView
        android:id="@+id/star_required_filed_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="* "
        android:textSize="@dimen/text_size_15"
        app:layout_constraintBottom_toTopOf="@id/confirm_button"
        app:layout_constraintLeft_toLeftOf="@id/input_layout_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/input_layout_confirm_password" />

    <TextView
        android:id="@+id/required_filed_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/star_required_text"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintBottom_toTopOf="@id/confirm_button"
        app:layout_constraintLeft_toRightOf="@id/star_required_filed_tv"
        app:layout_constraintTop_toBottomOf="@id/input_layout_confirm_password" />

    <Button
        android:id="@+id/confirm_button"
        style="@style/RoundedCornerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/confirm"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cancel_button"
        app:layout_constraintRight_toRightOf="@id/input_layout_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/required_filed_tv"
        tools:text="Подтвердить" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/RoundedCornerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/cancel"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toBottomOf="@id/confirm_button"
        app:layout_constraintLeft_toLeftOf="@id/input_layout_confirm_password"
        app:layout_constraintRight_toLeftOf="@id/confirm_button"
        app:layout_constraintTop_toTopOf="@id/confirm_button" />
</androidx.constraintlayout.widget.ConstraintLayout>