<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/base_toolbar"
            style="@style/ActionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:movable="true"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageButton
            android:id="@+id/search_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/padding_10"
            android:layout_marginTop="@dimen/padding_60"
            android:background="#00FFFFFF"
            android:contentDescription="@string/search_button_text"
            android:minWidth="32dp"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_baseline_search_24" />

        <EditText
            android:id="@+id/search_text_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_60"
            android:layout_marginTop="@dimen/padding_60"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:textSize="25dp"
            android:visibility="invisible" />

    </com.yandex.mapkit.mapview.MapView>

    <ImageButton
        android:id="@+id/line_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/line_point_text"
        android:minHeight="48dp"
        android:translationZ="5dp"
        app:layout_anchor="@+id/mapview"
        android:background="@null"
        android:layout_marginTop="@dimen/padding_100"
        android:layout_marginStart="@dimen/padding_10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/zoom_in_id"
        app:srcCompat="@drawable/ic_baseline_show_chart_30" />

    <ImageButton
        android:id="@+id/zoom_in_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/zoom_in_text"
        app:layout_anchor="@+id/mapview"
        android:translationZ="5dp"
        android:background="@null"
        android:layout_marginStart="@dimen/padding_10"
        app:layout_constraintTop_toBottomOf="@id/line_point"
        app:layout_constraintBottom_toTopOf="@id/zoom_out_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_30" />

    <ImageButton
        android:id="@+id/zoom_out_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/zoom_out_text"
        android:minHeight="48dp"
        android:translationZ="5dp"
        android:background="@null"
        app:layout_anchor="@+id/mapview"
        android:layout_marginStart="@dimen/padding_10"
        app:layout_constraintTop_toBottomOf="@id/zoom_in_id"
        app:layout_constraintBottom_toTopOf="@id/layers_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_baseline_remove_30" />

    <ImageButton
        android:id="@+id/layers_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/zoom_out_text"
        android:minHeight="48dp"
        android:translationZ="5dp"
        app:layout_anchor="@+id/mapview"
        android:background="@null"
        android:layout_marginBottom="@dimen/padding_100"
        android:layout_marginStart="@dimen/padding_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_baseline_layers_30" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/zoom_out_text"
        android:minHeight="48dp"
        android:translationZ="5dp"
        app:layout_anchor="@+id/mapview"
        android:background="@null"
        android:layout_marginBottom="@dimen/padding_10"
        android:layout_marginEnd="@dimen/padding_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_baseline_menu_24" />

    <Button
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Done"
        android:background="@color/blue_light"
        android:paddingHorizontal="@dimen/padding_40"
        android:layout_marginStart="@dimen/padding_10"
        android:layout_marginBottom="@dimen/padding_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


    <!--    <androidx.coordinatorlayout.widget.CoordinatorLayout-->
    <!--        android:id="@+id/hideable_main_menu"-->
    <!--        xmlns:tools="http://schemas.android.com/tools"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        tools:context="com.androidsample.BottomSheetActivity"-->
    <!--        android:translationZ="5dp">-->
    <!--        <include layout="@layout/item_menu" />-->
    <!--    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->

    <androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@+id/hideable_teg_menu"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.androidsample.BottomSheetActivity"
        android:translationZ="5dp">

        <include layout="@layout/category_on_tap_fragment" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@+id/hideable_layout_menu"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.androidsample.BottomSheetActivity"
        android:translationZ="5dp">

        <include layout="@layout/item_layers_menu" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>